--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <div></div>
       <div>
         <div id="tag-6"></div>
+        </div>
       </div>
     </div>
     <div class="parent">
